--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "nodeman server.js"
+    "start": "nodemon server.js"
+  },
+  "devDependencies": {
+    "socket.io": "^3.0.3"
   }
 }
