--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "mocha": "6.2.1",
+    "mongo-sanitize": "1.0.1",
     "mongoose": "5.7.1",
     "nodemon": "^2.0.6"
   },
